<resources>
    <string name="app_name" translatable="false">Bermuda</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="PasswordC">Confirm Password</string>
    <string name="PasswordNoCoin">The passwords are not the same</string>
    <string name="Email">Email</string>
    <string name="Login">LOGIN</string>
    <string name="FillAll">Fill every field</string>
    <string name="ErrorConexion">Connection Error</string>
    <string name="ErrorDesc">"Unknown Error"</string>
    <string name="LoginConfirm">Correct Login</string>
    <string name="SignUpConfirm">User has registered</string>
    <string name="IncorrectCredentials">Incorrect Credentials</string>
    <string name="Signup">SIGN UP</string>
    <string name="Cancel">CANCEL</string>
    <string name="Fishname">Fish Name *</string>
    <string name="Fishname2">Fish Name</string>
    <string name="Fishdesc">Fish Description *</string>
    <string name="Fishaudio">Fish Audio</string>
    <string name="Play">Play</string>
    <string name="Fishimage">Fish Image</string>
    <string name="NewFish">New Fish</string>
    <string name="ChooseFile">Choose File</string>
    <string name="upload">Upload</string>
    <string name="noAudio">Audio Unavailable</string>
    <string name="Contactanos">Contact Us</string>

    <string name="Greeting">Welcome!</string>
    <string name="Languaje">Language</string>
    <string name="PrivaciPolitics">Privacy Policy</string>
    <string name="Creditos">Credits</string>

    <string name="ExtendedPrivaciPolitics">Privacy Policy - Bermuda</string>
    <string name="introduction">Introduction</string>
    <string name="copyright">Copyright Ownership</string>
    <string name="GitHubAccounts">GitHub Accounts</string>
    <string name="copyrightText">The owner of our logo svg asset (Fish Fishbone Skeleton SVG Vector) was made by the user icojam at the website SVGRepo. Among other creators, we would like to include: Dazzle UI (user_alt_1) and krystonschwarze (exit_svg). </string>
    <string name="textoCompromiso1">At Bermuda, we are committed to protecting the privacy and security of the personal information of our users, researchers, and collaborators dedicated to marine life.</string>
    <string name="InformationRecopilation">1. Information We Collect</string>
    <string name="InformationRecopilationText">We collect the users email address, and other information voluntarily provided by users through forms or registrations.</string>
    <string name="InformationUse">2. Use of Information</string>
    <string name="InformationUseText">The information is used to improve our services, saving each entry in our app database.</string>
    <string name="DataShare">3. Data Sharing</string>
    <string name="DataShareText">We do not sell or share personal information with third parties, except when required by law or necessary for specific reports.</string>
    <string name="Security">4. Security</string>
    <string name="SecurityText">We implement technical and organizational measures to protect information against unauthorized access, alteration, or loss.</string>
    <string name="UserRights">5. User Rights</string>
    <string name="UserRightsText">Users may request access, correction, or deletion of their personal data at any time by contacting bermudateam26@gmail.com or our GitHub accounts.</string>
    <string name="PoliticChanges">6. Changes to This Policy</string>
    <string name="PoliticChangesText">We reserve the right to update this policy when necessary. Changes will be published in this section.</string>

    <string name="LogoBermuda">Bermuda Logo</string>
    <string name="phone">📞 Phone</string>
    <string name="mail">✉ Email</string>

    <string name="logout_title">Log out</string>
    <string name="logout_message">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="image_selected">Image selected</string>
    <string name="audio_selected">Audio selected</string>
    <string name="fish_reloaded">Fish reloaded</string>

    <string name="error_loading_fish">Error loading fish</string>
    <string name="connection_error">Connection error</string>

    <string name="mandatory_fields">Name, description and image are required</string>
    <string name="invalid_session">Invalid session</string>

    <string name="error_upload_audio">Error uploading audio</string>
    <string name="error_upload_image">Error uploading image</string>

    <string name="fish_uploaded_success">Fish uploaded successfully.</string>
    <string name="error_insert_fish">Error inserting fish</string>

    <string name="no_body">no body</string>

</resources>