<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/NewFish"
        android:paddingBottom="10dp"
        android:textColor="@color/orange_500"
        />

    <EditText
        android:id="@+id/nameFish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Fishname"
        android:textSize="12sp"
        android:paddingBottom="10dp"/>

    <EditText
        android:id="@+id/descFish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Fishdesc"
        android:textSize="12sp"
        android:paddingBottom="10dp"/>

<!--    <TextView-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="match_parent"-->
<!--        android:gravity="center"-->
<!--        android:text="@string/Fishimage"/>-->

    <Button
        android:id="@+id/imgFish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue_200"
        android:text="@string/Fishimage"
        android:textColor="@color/white"
        android:paddingBottom="10dp"
        />

<!--    <TextView-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="match_parent"-->
<!--        android:gravity="center"-->
<!--        android:text="@string/Fishaudio"/>-->

    <Button
        android:id="@+id/audioFish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue_200"
        android:text="@string/Fishaudio"
        android:textColor="@color/white"
        android:paddingBottom="10dp"/>

    <Button
        android:id="@+id/uploadFish"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue_700"
        android:text="@string/upload"
        android:textColor="@color/orange_500"
        android:paddingBottom="10dp"/>


</LinearLayout>