<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:layout_marginTop="72dp"
            android:id="@+id/imgDetalle"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/Fishimage" />

        <TextView
            android:id="@+id/txtNombreDetalle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Fishname"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginTop="12dp" />

        <TextView
            android:id="@+id/txtDescripcionDetalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Fishdesc"
            android:layout_marginTop="8dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtAudioNoDisponible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Audio no disponible"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnPlayAudio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue_500"
            android:textColor="@color/orange_500"
            android:text="@string/Play"
            android:layout_marginTop="12dp" />
        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:id="@+id/linearTiempos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp">
            <TextView
                android:id="@+id/txtTiempoActual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0:00" />

            <TextView
                android:id="@+id/dospuntos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="1dp"
                android:layout_marginStart="1dp"
                android:text="/" />

            <TextView
                android:id="@+id/txtDuracionTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="0:00" />
        </LinearLayout>

    </LinearLayout>


</ScrollView>