<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_bottom_sheet"
    android:fillViewport="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imgDetalle"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/Fishimage" />
        <TextView
            android:id="@+id/txtNombreDetalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Fishname"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginTop="12dp"
            android:padding="16dp"/>

        <TextView
            android:id="@+id/txtDescripcionDetalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Fishdesc"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/txtAudioNoDisponible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Audio no disponible"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPlayAudio"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:text="@string/Play"
            style="@style/buttonNormal"
            android:textColor="@color/orange_500"
            android:backgroundTint="@color/blue_700"/>
        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"/>

        <LinearLayout
            android:id="@+id/linearTiempos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp">
            <TextView
                android:id="@+id/txtTiempoActual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="0:00" />

            <TextView
                android:id="@+id/dospuntos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginEnd="1dp"
                android:layout_marginStart="1dp"
                android:text="/" />

            <TextView
                android:id="@+id/txtDuracionTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:gravity="end"
                android:text="0:00" />
        </LinearLayout>

    </LinearLayout>


</ScrollView>