<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_200"
    tools:context=".LoginScreen">

    <ImageView
        android:id="@+id/backView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/deadfish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tinp1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="@id/gline1"
        app:layout_constraintStart_toStartOf="@id/gline2"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:startIconDrawable="@drawable/outline_alternate_email_24"
        app:hintTextColor="@color/blue_500"
        app:boxStrokeColor="@color/blue_700"
        >

        <EditText
            android:id="@+id/editUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/outline_alternate_email_24"
            android:alpha="0.6"
            android:textSize="10sp"
            android:background="@color/white"
            android:hint="@string/Email"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tinp2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/gline1"
        app:layout_constraintStart_toStartOf="@id/gline2"
        app:layout_constraintTop_toBottomOf="@id/tinp1"
        app:startIconDrawable="@drawable/key_basic_com"
        app:passwordToggleEnabled="true"
        app:hintTextColor="@color/blue_500"
        app:boxStrokeColor="@color/blue_700"
        >

        <EditText
            android:id="@+id/editPassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:alpha="0.6"
            android:drawableLeft="@drawable/key_basic_com"
            android:background="@color/white"
            android:hint="@string/Password"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:onClick="openMain"
        android:layout_marginTop="4dp"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="@id/gline1"
        app:layout_constraintStart_toStartOf="@id/gline2"
        app:layout_constraintTop_toBottomOf="@id/tinp2"
        android:text="@string/Login"
        style="@style/buttonNormal" />
    <Button
        android:id="@+id/btnSignup"
        android:onClick="openSignUp"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="@id/gline1"
        app:layout_constraintStart_toStartOf="@id/gline2"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        android:text="@string/Signup"
        style="@style/buttonOutlined" />


</androidx.constraintlayout.widget.ConstraintLayout>